# flora-api

./: .debug_env  .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md  docker-compose.yml  flora-api.cabal  stack.yaml
app/: Main.hs
elm/: Main.hs
nginx/: nginx.conf
src/: Api.hs  Config.hs  Lib.hs  Models.hs
src/Api/: ContactForm.hs  FloraApp.hs
src/Network/HaskellNet/: SMTP.hs  SSL.hs
src/Network/HaskellNet/SMTP/: SSL.hs
src/Network/HaskellNet/SSL/: Internal.hs
