name: flora-api
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/flora-api#readme
category: Web
author: Author name here
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/flora-api

library
    exposed-modules:
        Config
        Models
        Api
        Api.FloraApp
    build-depends:
        base >=4.7 && <5,
        aeson -any,
        bytestring -any,
        elm-export -any,
        monad-control -any,
        monad-logger -any,
        mtl -any,
        persistent -any,
        persistent-postgresql -any,
        persistent-template -any,
        servant -any,
        servant-elm -any,
        servant-js -any,
        servant-server -any,
        transformers -any,
        wai -any,
        wai-extra -any,
        warp -any
    default-language: Haskell2010
    hs-source-dirs: src

executable flora-api
    main-is: Main.hs
    build-depends:
        base -any,
        elm-export -any,
        flora-api -any,
        servant-elm -any,
        persistent-postgresql -any,
        wai -any,
        warp -any,
        monad-logger -any,
        safe -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite flora-api-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        flora-api -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
