name: flora-api
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2017 Author name here
maintainer: example@example.com
homepage: https://github.com/githubuser/flora-api#readme
category: Web
author: Author name here
extra-source-files:
    README.md

source-repository head
    type: git
    location: https://github.com/githubuser/flora-api

library
    exposed-modules:
        Config
        Models
        Api
        Api.ContactForm
        Api.FloraApp
    other-modules:
        Network.Compat
        Network.HaskellNet.Auth
        Network.HaskellNet.BSStream
        Network.HaskellNet.SMTP
        Network.HaskellNet.SMTP.SSL
        Network.HaskellNet.SSL
        Network.HaskellNet.SSL.Internal
    build-depends:
        base >=4.7 && <5,
        aeson -any,
        array -any,
        base64-string -any,
        blaze-html -any,
        bytestring -any,
        connection >= 0.2.7 && < 0.3,
        cryptohash >0.6,
        data-default,
        elm-export -any,
        elm-export-persistent -any,
        mime-mail >= 0.4.7 && < 0.6,
        monad-control -any,
        monad-logger -any,
        mtl -any,
        natural-transformation -any,
        network -any,
        old-time -any,
        persistent -any,
        persistent-postgresql -any,
        persistent-template -any,
        pretty -any,
        servant -any,
        servant-elm -any,
        servant-js -any,
        servant-server -any,
        smtp-mail -any,
        text -any,
        tls >= 1.2 && < 1.5,
        transformers -any,
        wai -any,
        wai-extra -any,
        warp -any
    default-language: Haskell2010
    hs-source-dirs: src

executable flora-api
    main-is: Main.hs
    build-depends:
        base -any,
        elm-export -any,
        flora-api -any,
        persistent-postgresql -any,
        servant -any,
        servant-elm -any,
        servant-options -any,
        servant-server -any,
        text -any,
        wai -any,
        wai-cors -any,
        warp -any,
        monad-logger -any,
        safe -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

executable elm-api-consumer
    main-is: Main.hs
    build-depends:
        base -any,
        elm-export -any,
        flora-api -any,
        servant-elm -any
    default-language: Haskell2010
    hs-source-dirs: elm
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite flora-api-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        flora-api -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
